Fixing Mailing and delete obsolete content